Fix rounded corners for jumbotron visible

--- a/static/css/syna.css
+++ b/static/css/syna.css
@@ -10,6 +10,10 @@
   border-radius: 0rem;
 }
 
+.jumbotron {
+  border-radius: 0rem !important;
+}
+
 .overlay {
   position: relative;
   z-index: 100;
